Add srcUrl to manifest and update readme

--- a/BetterHands/manifest.json
+++ b/BetterHands/manifest.json
@@ -2,6 +2,7 @@
   "guid": "betterhands",
   "version": "0.0.0",
   "name": "BetterHands",
+  "sourceUrl": "https://github.com/Maiq-The-Dude/BetterHands/",
   "authors": [
     "M'aiq"
   ],
