Copy hookgen.conf to output folder for makefile

--- a/BetterHands/BetterHands.csproj
+++ b/BetterHands/BetterHands.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="hookgen.conf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="manifest.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
