Move to Sodalite - Remove Deli.H3VR - Require Deli 0.4

--- a/BetterHands/BetterHands.csproj
+++ b/BetterHands/BetterHands.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Deli" Version="0.3.2" />
-    <PackageReference Include="Deli.H3VR" Version="0.2.0" />
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="all" />
+    <PackageReference Include="Deli" Version="0.4.1" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
     <PackageReference Include="jnm2.ReferenceAssemblies.net35" Version="1.0.1" PrivateAssets="all" />
+    <PackageReference Include="Sodalite" Version="1.0.0" />
   </ItemGroup>
   
   <ItemGroup>
