--- a/BetterHands/manifest.json
+++ b/BetterHands/manifest.json
@@ -1,14 +1,11 @@
 ﻿{
-  "guid": "betterhands",
-  "version": "1.2.0",
-  "require": "0.3.2",
+  "guid": "maiq.betterhands",
+  "version": "1.3.0",
+  "require": "0.4.1",
   "name": "BetterHands",
   "description": "Recolor controller geo, resize interaction spheres, and add mag palming.",
   "authors": [ "M'aiq" ],
   "source_url": "https://github.com/Maiq-The-Dude/BetterHands/",
-  "dependencies": {
-    "deli.h3vr": "0.2.0"
-  },
   "assets": {
     "patcher": {
       "hookgen.conf": "deli:monomod.hookgen"
