--- a/thunderstore/manifest.json
+++ b/thunderstore/manifest.json
@@ -4,6 +4,6 @@
     "dependencies": [
         "nrgill28-Sodalite-1.0.0"
     ],
-    "description": "A Deli mod which adds mag palming and controller color customization.",
+    "description": "Adds mag palming and controller color customization.",
     "website_url": "https://github.com/Maiq-The-Dude/BetterHands"
 }
