--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,10 @@ jobs:
         dotnet-version: 5.0.x
         
     - name: Install dependencies
-      run: dotnet restore BetterHands/
+      run: dotnet restore src/
       
     - name: Build
-      run: dotnet build BetterHands/ --configuration Release --no-restore
+      run: dotnet build src/ --configuration Release --no-restore
       
     - name: Package
       run: bash thunderstore/make_package.sh
