--- a/src/BetterHands/BetterHands.csproj
+++ b/src/BetterHands/BetterHands.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net35</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>8</LangVersion>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   
   <ItemGroup>
