--- a/thunderstore/manifest.json
+++ b/thunderstore/manifest.json
@@ -1,9 +1,9 @@
 {
     "name": "BetterHands",
-    "version_number": "1.7.0",
+    "version_number": "1.8.0",
     "dependencies": [
-        "nrgill28-Sodalite-1.3.0"
+        "nrgill28-Sodalite-1.4.0"
     ],
-    "description": "Adds mag palming and controller color customization.",
+    "description": "Adds custom mag palming and controller & quickbelt color customization.",
     "website_url": "https://github.com/Maiq-The-Dude/BetterHands"
 }
