--- a/thunderstore/manifest.json
+++ b/thunderstore/manifest.json
@@ -4,6 +4,6 @@
     "dependencies": [
         "nrgill28-Sodalite-1.4.0"
     ],
-    "description": "Adds custom mag palming and controller & quickbelt color customization.",
+    "description": "Adds custom mag palming, controller & quickbelt color customization, and more",
     "website_url": "https://github.com/Maiq-The-Dude/BetterHands"
 }
