--- a/thunderstore/manifest.json
+++ b/thunderstore/manifest.json
@@ -1,8 +1,9 @@
 {
     "name": "BetterHands",
-    "version_number": "1.8.0",
+    "version_number": "1.8.1",
     "dependencies": [
-        "nrgill28-Sodalite-1.4.0"
+        "nrgill28-Sodalite-1.4.0",
+        "nrgill28-HookGenPatcher_H3VR-1.2.3"
     ],
     "description": "Adds custom mag palming, controller & quickbelt color customization, and more",
     "website_url": "https://github.com/Maiq-The-Dude/BetterHands"
